--- a/gb/20/1/14/n11792013.md
+++ b/gb/20/1/14/n11792013.md
@@ -1,25 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大温社区活动资讯一览（2020年1月20日-1月26日）</h2>
-
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月14日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%a4%be%e5%8d%80%e6%b4%bb%e5%8b%95.md#1">社区活动</a>，是华人了解加拿大、融入社区并与他人互动的窗口。本报收集了大温地区下周（2020年1月20日至1月26日）的一些<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%a4%be%e5%8d%80%e6%b4%bb%e5%8b%95.md#1">社区活动</a>，供您参考浏览。</p>
+<p>【大纪元2020年01月14日讯】<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%a4%be%e5%8d%80%e6%b4%bb%e5%8b%95.md#1">社区活动</a>，是华人了解加拿大、融入社区并与他人互动的窗口。本报收集了大温地区下周（2020年1月20日至1月26日）的一些<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%a4%be%e5%8d%80%e6%b4%bb%e5%8b%95.md#1">社区活动</a>，供您参考浏览。</p>
 <h3>1. 第34届Brackendale白头鹰节</h3>
-<p>简介：卑诗小镇贝肯黛（Brackendale）是赏鹰圣地，位居<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E.md#1">温哥华</a>东北方，车程大约1小时。每年的白头鹰节将开放著名赏鹰点“老鹰走道” （Eagle Run，在Easter Seal Camp营地对面）。观众可自带望远镜，或水上漂流，或骑马观赏盘旋天际的白头鹰；白头鹰节活动期间，还有白头鹰摄影展、观鹰小组游、纪录片播放和文化歌舞表演等。详情请查看?<ahref="https://www.exploresquamish.com/events/brackendale-eagle-festival"><span style="font-weight: 400;">https://www.exploresquamish.com/events/brackendale-eagle-festival</span></a><br />
+<p>简介：卑诗小镇贝肯黛（Brackendale）是赏鹰圣地，位居温哥华东北方，车程大约1小时。每年的白头鹰节将开放著名赏鹰点“老鹰走道” （Eagle Run，在Easter Seal Camp营地对面）。观众可自带望远镜，或水上漂流，或骑马观赏盘旋天际的白头鹰；白头鹰节活动期间，还有白头鹰摄影展、观鹰小组游、纪录片播放和文化歌舞表演等。详情请查看?<ahref="https://www.exploresquamish.com/events/brackendale-eagle-festival"><span style="font-weight: 400;">https://www.exploresquamish.com/events/brackendale-eagle-festival</span></a><br />
 时间： 1月1日-31日<br />
 地点：Brackendale Art Gallery, 41950 Government Rd, Brackendale, BC</p>
-<h3>2. 街头<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%be%8e%e9%a3%9f%e5%9f%8e.md#1">美食城</a>?Street Food City</h3>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%ba%ab%e5%93%a5%e8%8f%af.md#1">温哥华</a>街头<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%be%8e%e9%a3%9f%e5%9f%8e.md#1">美食城</a>再度光临，在1月17日至2月6日期间迎接顾客，人们可以免费品尝不同种类的美味佳肴。<br />
+<h3>2. 街头<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%be%8e%e9%a3%9f%e5%9f%8e.md#1">美食城</a>?Street Food City</h3>
+<p><ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%ba%ab%e5%93%a5%e8%8f%af.md#1">温哥华</a>街头<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%be%8e%e9%a3%9f%e5%9f%8e.md#1">美食城</a>再度光临，在1月17日至2月6日期间迎接顾客，人们可以免费品尝不同种类的美味佳肴。<br />
 日期：2020年1月17日、18日、19日与31日，2月1日至6日<br />
 时间：周一至周五，11am–3pm，周末11am–5pm<br />
-地点：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%ba%ab%e5%93%a5%e8%8f%af.md#1">温哥华</a>美术馆北边，750 Hornby St, Vancouver, BC</p>
-<h3>3.?<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E.md#1">温哥华</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E9%A3%9F%E8%8A%82.md#1">美食节</a> Dine Out Vancouver</h3>
-<p><span style="font-weight: 400;">身在美食天堂的温哥华，有机会品尝到世界各地美食。1月17日至2月2日期间即将举行的温哥华<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E9%A3%9F%E8%8A%82.md#1">美食节</a>，不妨预订一些喜欢的餐馆，享受一餐美味佳肴，价格又特别优惠。</span></p>
+地点：<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%ba%ab%e5%93%a5%e8%8f%af.md#1">温哥华</a>美术馆北边，750 Hornby St, Vancouver, BC</p>
+<h3>3.?温哥华美食节 Dine Out Vancouver</h3>
+<p><span style="font-weight: 400;">身在美食天堂的温哥华，有机会品尝到世界各地美食。1月17日至2月2日期间即将举行的温哥华美食节，不妨预订一些喜欢的餐馆，享受一餐美味佳肴，价格又特别优惠。</span></p>
 <p><span style="font-weight: 400;">今年共有200多家餐馆参加此活动，每人三套餐的价钱从article content begin -->5、$25、$35至$45不等。详情请查看?</span><ahref="https://www.dineoutvancouver.com/restaurants/"><span style="font-weight: 400;">https://www.dineoutvancouver.com/restaurants/</span></a>?.</p>
 <h3>4. Oakridge购物中心新年庆贺</h3>
-<p><span style="font-weight: 400;">全世界不同地方的人，在农历新年是怎么庆贺呢？各自展现的文化又有什么特点呢？Oakridge购物中心<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%96%B0%E5%B9%B4.md#1">中国新年</a>期间，将举办新年庆贺活动，艺术、文化与表演，带给人们一个欢快喜庆的黄历新年。</span><span style="font-weight: 400;"><br />
+<p><span style="font-weight: 400;">全世界不同地方的人，在农历新年是怎么庆贺呢？各自展现的文化又有什么特点呢？Oakridge购物中心中国新年期间，将举办新年庆贺活动，艺术、文化与表演，带给人们一个欢快喜庆的黄历新年。</span><span style="font-weight: 400;"><br />
 </span><span style="font-weight: 400;">时间：1月17日&#8211;2月10日，购物中心开放时间<br />
 </span><span style="font-weight: 400;">地址：Oakridge Centre，650 W 41st Avenue, Vancouver</span></p>
 <h3>5.? 一场视觉听觉的年夜饭，经典菜色重现！</h3>
@@ -39,7 +38,7 @@
 时间：1月26日，上午11点到下午2点<br />
 地点：列治文购物中心 Richmond Centre，6551 No. 3 Rd</p>
 <h3>9. 唐人街创意鼠年新年节庆、唐人街新年游行</h3>
-<p><span style="font-weight: 400;">每年一度的唐人街新年游行，将于1月26日上午11点举行，同时沿着游行路线的创意新年节庆，将邀请手工艺术品摊位、美食摊位等参展，共同庆贺<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%96%B0%E5%B9%B4.md#1">中国新年</a>。<br />
+<p><span style="font-weight: 400;">每年一度的唐人街新年游行，将于1月26日上午11点举行，同时沿着游行路线的创意新年节庆，将邀请手工艺术品摊位、美食摊位等参展，共同庆贺中国新年。<br />
 </span><span style="font-weight: 400;">时间：1月26日，上午11点到下午4点<br />
 </span><span style="font-weight: 400;">地点：温哥华唐人街，</span><span style="font-weight: 400;">188 E Pender St. Vancouver, BC</span></p>
 <h3>10. 菲沙谷葡萄酒之旅</h3>
@@ -78,8 +77,8 @@
 联络: SUCCESS 604-279-7180<br />
 日期: 1月22日，上午10点至12点<br />
 地点: 列治文公共图书馆 (2nd Floor Program Room), 7700 Minoru Gate , Richmond, BC</p>
-<h3>18. 个人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>及海外资产申报须知 &#8211; 国语讲座（本拿比/新西 敏）</h3>
-<p>讲座内容：加拿大税务条例及个人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%A5%E7%A8%8E.md#1">报税</a>注意事项；节税须知；海外资产申报概要；如何定义税务及非税务居民<br />
+<h3>18. 个人报税及海外资产申报须知 &#8211; 国语讲座（本拿比/新西 敏）</h3>
+<p>讲座内容：加拿大税务条例及个人报税注意事项；节税须知；海外资产申报概要；如何定义税务及非税务居民<br />
 主讲人: Mr. Andrew Liu, CPA, 特许会计师，咨询及报名热线: 604-430-1899<br />
 日期: 1月21日，下午12点半到2点半<br />
 地点: 本那比丽晶广场二楼中信中心, 4533 Kingsborough Street, Burnaby, BC</p>
@@ -97,7 +96,7 @@
 地点：普尔广场Jack Poole Plaza，1055 Canada Place, Vancouver</p>
 <p>==============</p>
 <h3>22. 圣诞树要丢掉，请来大温处理中心</h3>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e8%81%96%e8%aa%95%e7%af%80.md#1">圣诞节</a>刚刚过去，许多人正在考虑处理掉圣诞树。大温哥华地区有许多处理中心，可以将圣诞树送到这些地方。由于许多处理中心是非盈利的慈善机构，主要通过捐款方式收费。<br />
+<p><ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e8%81%96%e8%aa%95%e7%af%80.md#1">圣诞节</a>刚刚过去，许多人正在考虑处理掉圣诞树。大温哥华地区有许多处理中心，可以将圣诞树送到这些地方。由于许多处理中心是非盈利的慈善机构，主要通过捐款方式收费。<br />
 详细处理中心可以查阅：<ahref="http://www.rcbc.ca/">www.rcbc.ca</a></p>
 <div class="" data-block="true" data-editor="4r2pl" data-offset-key="9mvo-0-0">
 <h3>23. 圣保罗医院的希望之光灯饰展</h3>
@@ -108,7 +107,6 @@
 <p>温哥华艺术馆是艺术珍藏的殿堂，吸引着众多艺术爱好者前往。每周二晚上，温哥华艺术馆特别对外开放，不用缴纳通常的门票费，自愿捐款方式欢迎大家前来参观。捐赠门票也只用于支持艺术馆的公众教育项目。详情请查阅：www.vanartgallery.bc.ca<br />
 时间：每周二，晚上5点到9点<br />
 地点：Vancouver Art Gallery，750 Hornby Street, Vancouver</p>
-</div>
 <h3>25.?温哥华市中心的免费滑冰场</h3>
 <div class="dable_placeholder">
 <p>温哥华市中心的罗伯森广场（Robson Square）免费滑冰场，自12月1日正式对外开放。现场有可租借冰鞋，每双5元，只收现金。<span style="font-weight: 400;">详情可查阅?</span><ahref="http://www.robsonsquare.com"><span style="font-weight: 400;">www.robsonsquare.com</span></a>?，或致电604-646-3554。<br />
@@ -120,13 +118,12 @@
 <p>高贵林市即将在11月30日举办一个免费Lafarge灯饰开幕式，此灯饰将一直延续到明年1月20日，几万灯饰组成的各式各样图案，环绕着Lafarge湖边，圣诞节日气氛温馨浓厚，请查看网站：<ahref="https://www.coquitlam.ca/parks-recreation-and-culture/arts-and-culture/special-events-calendar/LightsatLafarge.aspx">https://www.coquitlam.ca/parks-recreation-and-culture/arts-and-culture/special-events-calendar/LightsatLafarge.aspx</a><br />
 时间：2019年11月30日启动仪式从晚上6点到8点半，现场有美食与娱乐，灯饰将一直点燃至2020年1月20日，时间将一直从黄昏至半夜。</p>
 <h3>27. 北温Canyon Lights峡谷之光</h3>
-<p>北温的卡皮拉诺吊桥公园，黑幕降临后的夜晚，因为圣诞节日的灯饰而浪漫璀璨，是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%ba%ab%e5%93%a5%e8%8f%af.md#1">温哥华</a>不可错过的一道风景！购票网站：<ahref="https://www.capbridge.com/visit/">www.capbridge.com/visit/</a>?，门票：$53.95/大人，$39.95/学生<br />
+<p>北温的卡皮拉诺吊桥公园，黑幕降临后的夜晚，因为圣诞节日的灯饰而浪漫璀璨，是<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%ba%ab%e5%93%a5%e8%8f%af.md#1">温哥华</a>不可错过的一道风景！购票网站：<ahref="https://www.capbridge.com/visit/">www.capbridge.com/visit/</a>?，门票：$53.95/大人，$39.95/学生<br />
 时间：2019年11月22日至2020年1月26日<br />
 地点：3735 Capilano Rd., North Vancouver, BC</p>
 <h3>28.?免费英文文法语句辅导班</h3>
 <p>目标群体:八年级到十年级学生<br />
 日期：11月13日2019 开课，每逢星期三<br />
-时间：下午三点半到五点<br />
 报名电话：604-366-6012<br />
 地点：110 – 5751 Cedarbridge Way, Richmond</p>
 <h3>29. 免费小学四年级到七年级功课辅导班</h3>
@@ -134,7 +131,6 @@
 日期: 10月7日2019 至6月08日2020, 逢星期一<br />
 10月10日2019 至5月28日2020, 逢星期四<br />
 时间：下午三点半到五点<br />
-地点：110 – 5751 Cedarbridge Way, Richmond<br />
 报名电话：604-271-7600</p>
 <h3>30. 免费小学四年级到七年级功课辅导班：</h3>
 <p>目标：给予小学四年级到七年级的学生功课辅导和人生导师<br />
@@ -142,52 +138,42 @@
 地点：110 – 5751 Cedarbridge Way, Richmond<br />
 报名电话: 604-271-7600</p>
 <p>责任编辑：谢玉心</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/13/n10214943.md#1">温哥华荣光联谊会新春联欢 喜迎狗年大吉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/3/n10889031.md#1">温哥华圣诞大游行 大陆移民赞法轮大法好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/12/n11039619.md#1">祥猪飞临温哥华  LunarFest热闹庆新年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/28/n11080460.md#1">台大温哥华校友会年会联欢及换届</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/12/24/n11742085.md#1">温哥华合家欢圣诞餐舞会 欢庆喜悦常驻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/3/n11766670.md#1">6000人纪念温哥华北极熊冬泳百年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/4/n13817027.md#1">青山依旧 萧祖铭油画展9月9日举办开幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/8/n13425062.md#1">温台大校友讲座：圆山大饭店的文化行销与再造</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/18/n13384761.md#1">11月美丽讲座 专家畅谈台湾医美整形服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/26/n13260865.md#1">三场健康讲座：展示台湾特色医疗与产品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/13/n10214943.md#1">温哥华荣光联谊会新春联欢 喜迎狗年大吉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/3/n10889031.md#1">温哥华圣诞大游行 大陆移民赞法轮大法好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/12/n11039619.md#1">祥猪飞临温哥华  LunarFest热闹庆新年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/28/n11080460.md#1">台大温哥华校友会年会联欢及换届</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/24/n11742085.md#1">温哥华合家欢圣诞餐舞会 欢庆喜悦常驻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/3/n11766670.md#1">6000人纪念温哥华北极熊冬泳百年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/4/n13817027.md#1">青山依旧 萧祖铭油画展9月9日举办开幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/8/n13425062.md#1">温台大校友讲座：圆山大饭店的文化行销与再造</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/18/n13384761.md#1">11月美丽讲座 专家畅谈台湾医美整形服务</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/26/n13260865.md#1">三场健康讲座：展示台湾特色医疗与产品</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030544.md#1">我所遇见的中国“灵魂”们（上）：撞见司机的内心宇宙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/27/n14023265.md#1">带着记忆转生 小婴儿刚出生就会说话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027072.md#1">宰相范质遇到的神奇事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031717.md#1">浪淘沙?佳人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997207.md#1">【历史的瞬间】美军82空降师解放纳粹集中营</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034316.md#1">【十字路口】美俄高层密谈 俄乌停火露曙光？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034401.md#1">【新闻大破解】北约历史性峰会 东进印太成势？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034498.md#1">【马克时空】乌克兰对AMX-10RC评价如何</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033071.md#1">上海人大董云虎落马 中共20大后正省级首虎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032527.md#1">党媒称“树立正确的就业观”评论区翻车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031647.md#1">组图：夫妇买下140年历史豪宅 内藏大量宝藏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032730.md#1">瑞莎领队赴欧扫19金 台小将披国旗登台28次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032443.md#1">梁朝伟与刘德华同框 两人表情迥异引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033031.md#1">黄子佼列被告首发声 向受害者致歉：配合调查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033146.md#1">外媒闹乌龙 报导李玟离世搭配刘亦菲图片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033168.md#1">艾美奖提名出炉 《继承之战》以27项领跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032808.md#1">睡觉前吃这些东西 容易做恶梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033497.md#1">搭机时为什么耳朵会痛？ 应该如何改善？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032553.md#1">人工甜味剂增癌症及心血管病风险 糖尿病患或可用木糖醇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033227.md#1">黑眼圈、眼睛浮肿让你未老先衰？专家建议6招消眼袋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031565.md#1">团队默契关乎成败 上谈判桌活用《孙子兵法》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306705.md#1">【马克时空】乌克兰F-16终成军 配什么武器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305216.md#1">唐山打人事件再引关注 警察异地实名举报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305084.md#1">【更新】2024年巴黎奥运奖牌榜 8月5日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/14/n11792013.htm">大温社区活动资讯一览（2020年1月20日-1月26日）</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/1/14/n11792013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/14/n11792013.htm">大温社区活动资讯一览（2020年1月20日-1月26日）</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/1/14/n11792013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
